[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://tests/examples/portal_teleport_test.gd" id="1_test"]
[ext_resource type="PackedScene" uid="uid://bqhqxnhqxnhqx" path="res://scenes/entities/portal.tscn" id="2_portal"]

[node name="PortalTeleportTest" type="Node2D"]
script = ExtResource("1_test")

[node name="LevelPortal" parent="." instance=ExtResource("2_portal")]
position = Vector2(100, 100)

[node name="ScenePortal" parent="." instance=ExtResource("2_portal")]
position = Vector2(300, 100)

[node name="NextLevelPortal" parent="." instance=ExtResource("2_portal")]
position = Vector2(500, 100)

[node name="TestInfo" type="Label" parent="."]
offset_right = 800
offset_bottom = 50
text = "传送门测试场景 - 检查控制台输出查看测试结果"
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="."]
offset_top = 60
offset_right = 800
offset_bottom = 200
text = "传送门功能测试说明：
1. 左侧：关卡传送门（传送到关卡2）
2. 中间：场景传送门（传送到指定场景）
3. 右侧：下一关传送门（自动下一关）

请查看控制台输出了解测试结果"
vertical_alignment = 1